--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 15 15:21:13 AZT 2018
-ndk.dir=/home/yks-11/Android/Sdk/ndk-bundle
-sdk.dir=/home/yks-11/Android/Sdk
+#Thu Jan 18 21:15:24 MSK 2018
+sdk.dir=C\:\\Users\\mrAdmin\\AppData\\Local\\Android\\sdk1
