--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Jan 18 21:15:24 MSK 2018
-sdk.dir=C\:\\Users\\mrAdmin\\AppData\\Local\\Android\\sdk1
+sdk.dir=//home//yks-11//Android//Sdk
