--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     compile 'com.android.support:support-v13:27.0.2'
     compile 'com.wdullaer:materialdatetimepicker:3.5.0'
     compile 'com.jakewharton:butterknife:8.8.1'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.6.+'
+    compile 'id.zelory:compressor:2.1.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
     implementation "android.arch.persistence.room:runtime:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
