--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="ANDROID.PERMISSION.INTERNET"/>
     <uses-permission android:name="ANDROID.PERMISSION.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -29,6 +31,10 @@
             android:parentActivityName=".activity.MainActivity"
             android:configChanges="orientation|screenSize">
         </activity>
+
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/CropperStyle" /> <!-- optional (needed if default theme has no action bar) -->
 
         <meta-data
             android:name="android.max_aspect"
